增加算子、清洗api
